# password-cli

./: .gitignore  Cargo.toml  LICENSE  readme.md  test.txt
src/: lib.rs  main.rs
