[package]

name = "password-cli"
version = "0.0.1"
authors = ["Marcus Klaas <mail@marcusklaas.nl>"]

[lib]
name = "password-cli"

[dependencies]
#hyper = "*"
rustc-serialize = "*"
#rust-crypto = "*"
time = "*"

[dependencies.clipboard]
git = "https://github.com/marcusklaas/clipboard.git"

[dependencies.rust-crypto]
git = "https://github.com/dagenix/rust-crypto.git"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
